LPS-12772 LPS-12775 Regenerate
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@65047 05bdf26c-840f-0410-9ced-eb539d925f36